fixed a bug with all dropdown fields in all search pages

--- a/WebContent/views/questionManagement.view.html
+++ b/WebContent/views/questionManagement.view.html
@@ -49,7 +49,7 @@
                                     <label for="inputEmail3" class="col-sm-2 control-label">Response Type:</label>
                                     <div class="col-sm-7">                                     
                                         <select name="states" class="form-control" id="inputEmail3" placeholder="State" ng-options='qc.fieldId as qc.fieldValue for qc in model.responseTypeList' ng-model="model.searchQc.responseTypeFieldId" required="required">
-                                        
+                                        <option value="">Select Response Type</option>
                                         </select>
                                     </div>
                                 </div>
