--- a/WebContent/views/imageManagement.view.html
+++ b/WebContent/views/imageManagement.view.html
@@ -147,10 +147,10 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="inputEmail3" class="col-sm-2 control-label">image Category:</label>
+                                    <label for="inputEmail3" class="col-sm-2 control-label">Image Category:</label>
                                     <div class="col-sm-7">                                     
                                         <select name="states" class="form-control" id="inputEmail3" placeholder="State" ng-model="model.searchI.imageCategoryId" ng-options='ic.imageCategoryId as ic.imageCategoryName for ic in model.imageCategoryList' required="required">
-                                        
+                                        <option value="">Select Image Category</option>
                                         </select>
                                     </div>
                                 </div>
@@ -158,7 +158,7 @@
                                     <label for="inputEmail3" class="col-sm-2 control-label">Intensity:</label>
                                     <div class="col-sm-7">                                     
                                         <select name="Intensity" class="form-control" id="inputEmail3" placeholder="State" ng-model="model.searchI.imageIntensity" required="required">
-                 
+                 						<option value="">Select Image Intensity</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>
                                         <option value="3">3</option>
@@ -171,7 +171,7 @@
                                     <label for="inputEmail3" class="col-sm-2 control-label">Image Type:</label>
                                     <div class="col-sm-7">                                     
                                         <select name="imageType" class="form-control" id="inputEmail3" placeholder="State" ng-options='ic.fieldId as ic.fieldValue for ic in model.imageTypeList' ng-model="model.searchI.imageTypeId" required="required">
-                                        
+                                        <option value="">Select Image Type</option>
                                         
                                         
                                         </select>
