--- a/WebContent/views/location.view.html
+++ b/WebContent/views/location.view.html
@@ -76,7 +76,7 @@ Licensed under MIT
                                     <label for="inputEmail3" class="col-sm-2 control-label">State:</label>
                                     <div class="col-sm-7">                                     
                                         <select name="states" ng-init="model.searchLoc.state = ''" ng-options='state.fieldId as state.fieldValue for state in model.statesList.results' class="form-control" id="inputEmail3" placeholder="State" ng-model="model.searchLoc.state" required="required">
-                                       	<option value=''></option>
+                                       	<option value="">Select State</option>
                                         </select>
                                     </div>
                                 </div>
