--- a/WebContent/views/imageManagement.view.html
+++ b/WebContent/views/imageManagement.view.html
@@ -102,7 +102,12 @@
                                 <div class="form-group">
                                     <label for="inputName3" class="col-sm-2 control-label">Description:</label>
                                     <div class="col-sm-7">
-                                        <textarea type="text" class="form-control" id="inputName3" placeholder="Description of the image category" ng-model="model.createIc.imageCategoryDescription"></textarea>
+                                        <textarea type="text" class="form-control" id="inputName3" name= "descImg" ng-maxlength="1000" placeholder="Description of the image category" ng-model="model.createIc.imageCategoryDescription"></textarea>
+                                     <div ng-messages="model.locationCreateForm2.descImg.$error" style="color:maroon">									       
+									        
+									        <div ng-message="maxlength">maximum length of this field is 1000 characters</div>
+									      
+									    </div>
                                     </div>
                                 </div>
                
@@ -217,7 +222,12 @@
                                 <div class="form-group">
                                     <label for="inputName3" class="col-sm-2 control-label">Description:</label>
                                     <div class="col-sm-7">
-                                        <textarea type="text" class="form-control" id="inputName3" placeholder="Description of the Image" ng-model="model.createI.imageDescription"></textarea>
+                                        <textarea type="text" class="form-control" id="inputName3" name="imgDesc" placeholder="Description of the Image" ng-maxlength="1000" ng-model="model.createI.imageDescription"></textarea>
+                                   <div ng-messages="model.locationCreateForm.imgDesc.$error"  style="color:maroon">
+										
+										<div ng-message="maxlength">Maximum length of this field is 1000 characters</div>
+									      
+									    </div>
                                     </div>
                                 </div>
                                 
@@ -292,16 +302,20 @@
                                 <div class="form-group required">
                                     <label for="inputName2" class="col-sm-4 control-label">Category Name:</label>
                                     <div class="col-sm-7">
-                                        <input type="text" name="updatingTheImageCategoryName"class="form-control" id="inputName2" placeholder="Name of the Image" ng-model="model.updateIc.imageCategoryName" required="required">
+                                        <input type="text" name="updatingTheImageCategoryName"class="form-control" id="inputName2" ng-maxlength ="50" placeholder="Name of the Image" ng-model="model.updateIc.imageCategoryName" required="required">
                                    <div ng-messages="model.UpdateForm44.updatingTheImageCategoryName.$error" style="color:maroon">
                                     <div ng-message="required">this field is required</div> 
+                                    <div ng-message="maxlength">Maximum length of this field is 50 characters</div>
                                     </div>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputName3" class="col-sm-4 control-label">Description:</label>
                                     <div class="col-sm-7">
-                                        <textarea type="text" class="form-control" id="inputName3" placeholder="Description of the Image" ng-model="model.updateIc.imageCategoryDescription"></textarea>
+                                        <textarea type="text" class="form-control" id="inputName3" name="imgCD" ng-maxlength="1000" placeholder="Description of the Image" ng-model="model.updateIc.imageCategoryDescription"></textarea>
+                                        <div ng-messages="model.UpdateForm44.imgCD.$error" style="color:maroon">
+                                    <div ng-message="maxlength">Maximum length of this field is 1000 characters </div> 
+                                    </div>
                                     </div>
                                 </div>
                         
@@ -391,16 +405,20 @@
                                 <div class="form-group required">
                                     <label for="inputName2" class="col-sm-4 control-label">Image Name:</label>
                                     <div class="col-sm-7">
-                                        <input type="text" name="updateImageName" class="form-control" id="inputName2" placeholder="Name of the Image" ng-model="model.updateI.imageName" required="required">
+                                        <input type="text" name="updateImageName" class="form-control" id="inputName2" ng-maxlength ="50" placeholder="Name of the Image" ng-model="model.updateI.imageName" required="required">
                                   <div ng-messages="model.locationUpdateForm.updateImageName.$error" style="color:maroon">
                                     <div ng-message="required">this field is required</div> 
+                                    <div ng-message="maxlength">Max. length of this field is 50 Characters</div>
                                     </div>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="inputName3" class="col-sm-4 control-label">Description:</label>
                                     <div class="col-sm-7">
-                                        <textarea type="text" class="form-control" id="inputName3" placeholder="Description of the Image" ng-model="model.updateI.imageDescription"></textarea>
+                                        <textarea type="text" class="form-control" id="inputName3" name="descL" placeholder="Description of the Image" ng-maxlength="1000" ng-model="model.updateI.imageDescription"></textarea>
+                                    <div ng-messages="model.locationUpdateForm.descL.$error" style="color:maroon">                                   
+                                    <div ng-message="maxlength">Max. length of this field is 1000 Characters</div>
+                                    </div>
                                     </div>
                                 </div>
                         		<div class="form-group required">
@@ -434,7 +452,7 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group required">
                                   <label for="inputEmail3" class="col-sm-4 control-label">Select Image :</label>
                                   <div class="col-sm-7"> 
                                 <div> <input type='file' file-upload/></div>
